# custom-sso-provider

./: .env.example  .gitignore  Dockerfile  QUICK_START.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: cli.py  config.py  db.py  main.py  models.py  schemas.py  security.py
app/oidc/: discovery.py  jwks.py  tokens.py
app/routers/: auth.py  oidc.py  token.py
app/templates/: consent.html  error.html  login.html
deploy/: Caddyfile.local  nginx.local.conf
docs/: DEPLOY_AAPANEL.md
tests/: conftest.py  test_oidc.py
